# wagtail-ninja

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ruff.yml
development/app/: manage.py  pyproject.toml
development/app/app/: apps.py  urls.py
development/app/app/migrations/: 0001_initial.py
development/app/app/models/: __init__.py  blog.py
development/app/app/settings/: development.py
development/app/app/settings/partials/: paths.py  postgres.py  static.py  templates.py
docs/: conf.py  index.rst  spelling_wordlist.txt
docs/general-usage/: decorators.rst  graphql-types.rst  hooks.rst  middleware.rst  model-types.rst
docs/getting-started/: examples.rst  installation.rst  settings.rst
src/wagtail_ninja/: actions.py  apps.py  converter.py  helpers.py  model_utils.py  models.py  router.py  settings.py  str_utils.py  urls.py  utils.py  wagtail_hooks.py
src/wagtail_ninja/schemas/: base.py  collections.py  documents.py  images.py  interfaces.py  media.py  pages.py  redirects.py  rich_text.py  search.py  settings.py  sites.py  snippets.py  streamfield.py  structures.py  tags.py
src/wagtail_ninja/types/: json.py
tests/: requirements.txt  settings.py  settings_custom_interfaces.py  test_advert.py  test_blog.py  test_general.py  test_grapple.py  test_image_types.py  test_interfaces.py  test_models_types.py  test_previews.py  test_redirects.py  test_settings.py  test_utils.py  urls.py
tests/testapp/: blocks.py  interfaces.py  mutations.py
tests/testapp/models/: core.py  media.py
(+2 files in other folders)
